--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@components/*": ["./app/_components/*"],
+      "@public/*": ["./public/*"]
     }
   }
 }
